// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme Linter Constructor creates the tracker with a filled out config 1`] = `
Object {
  "themeVariableTracker": Object {
    "a": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "b": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "default": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
  },
  "themeableVariables": Set {},
}
`;

exports[`Theme Linter Constructor creates the tracker with an undefined scoped in the config 1`] = `
Object {
  "themeVariableTracker": Object {
    "a": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "b": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "default": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
  },
  "themeableVariables": Set {},
}
`;

exports[`Theme Linter Constructor creates the tracker with no default in the config 1`] = `
Object {
  "themeVariableTracker": Object {
    "a": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "b": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
  },
  "themeableVariables": Set {},
}
`;

exports[`Theme Linter Constructor creates the tracker with no scoped in the config 1`] = `
Object {
  "themeVariableTracker": Object {
    "default": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
  },
  "themeableVariables": Set {},
}
`;

exports[`Theme Linter Loader Plugin populates the list of themeable variables 1`] = `
Object {
  "themeVariableTracker": Object {
    "a": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "b": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
    "default": Object {
      "duplicateVariableTracker": Object {},
      "populatedVariables": Set {},
    },
  },
  "themeableVariables": Set {
    "--var1",
    "--var2",
  },
}
`;

exports[`Theme Linter Loader Plugin populates the list of tracked variables 1`] = `
Object {
  "themeVariableTracker": Object {
    "a": Object {
      "duplicateVariableTracker": Object {
        "--var1": Set {
          1,
        },
      },
      "populatedVariables": Set {
        "--var1",
      },
    },
    "b": Object {
      "duplicateVariableTracker": Object {
        "--var1": Set {
          1,
        },
        "--var2": Set {
          2,
          3,
        },
        "--var3": Set {
          3,
        },
      },
      "populatedVariables": Set {
        "--var1",
        "--var2",
        "--var3",
      },
    },
    "default": Object {
      "duplicateVariableTracker": Object {
        "--var1": Set {
          1,
        },
        "--var2": Set {
          2,
        },
        "--var3": Set {
          3,
        },
      },
      "populatedVariables": Set {
        "--var1",
        "--var2",
        "--var3",
      },
    },
  },
  "themeableVariables": Set {},
}
`;

exports[`Theme Linter Plugin pushes warning based on tracked variables 1`] = `
Array [
  "a.
The following variables are duplicated:
--var2
--var3",
  "b.
The following variables are missing:
--var1
--var2",
  "c.
The following variables are stale:
--var4",
  "d.
The following variables are missing:
--var1",
  "d.
The following variables are stale:
--var4",
  "d.
The following variables are duplicated:
--var2
--var3",
]
`;
